Hopefully fixed content not filling screen on mobile bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,10 @@
     --movieHoverBackground: var(--letterboxdBackground);
 }
 
+html {
+    scrollbar-gutter: stable;
+  }  
+
 .middle_footer {
     max-width: 720px;
 }
